--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>就活しないセミナー</title>
 <meta name=”keywords” content=”就活したくない,セミナー,アーティスト,夢,生き方,クリエイティブ,人生変える”>
 <meta name=”description” content=”『就活のしない秀活～履歴書のいらない大人に～』という題材の元に構成。アーティスト、クリエーター界の将来について、今の就活生や学生の右ならえ精神をぶっ壊すためのトークセッションやアーティストショーケースありDJタイムありのアーティスト、クリエーターの将来を考えるイベント。”>
-<link rel="stylesheet" href="http://black-flag.net/data/css/reset.css">
+<link rel="stylesheet" href="https://black-flag.net/data/css/reset.css">
 <link rel="stylesheet" href="css/style.min.css">
 <link rel="stylesheet" href="slick/slick.css">
 <link rel="stylesheet" href="slick/slick-theme.css">
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 <!-- <link rel="stylesheet" href="assets/css/styles.css" /> -->
 <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/jquery.shuffleLetters.js"></script>
 <script src="js/script.js"></script>
 <script src="slick/slick.js" type="text/javascript" charset="utf-8"></script>
